# genre-adaptive-nli-summarization-validator

./: .gitignore  QUALITY_PASS_SUMMARY.md  README.md  pyproject.toml  quality_check.py  requirements.txt
configs/: ablation.yaml  default.yaml  train_config.yaml
notebooks/: exploration.ipynb
scripts/: evaluate.py  predict.py  train.py
src/genre_adaptive_nli_summarization_validator/: __init__.py  exceptions.py
src/genre_adaptive_nli_summarization_validator/data/: __init__.py  loader.py  preprocessing.py
src/genre_adaptive_nli_summarization_validator/evaluation/: __init__.py  metrics.py
src/genre_adaptive_nli_summarization_validator/models/: __init__.py  components.py  model.py
src/genre_adaptive_nli_summarization_validator/training/: __init__.py  trainer.py
src/genre_adaptive_nli_summarization_validator/utils/: __init__.py  config.py
tests/: conftest.py  test_data.py  test_evaluation.py  test_exceptions.py  test_model.py  test_training.py
